Update application functionality and supporting components